# -thinkcheck-lib-

./: .env  .env.example  .gitignore  ALL_CODE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE_MIT_legacy.md  MANIFEST.in  PROJECT_STRUCTURE.md  README.md  UPGRADE_VERIFICATION_REPORT.md  VERIFICATION_REPORT.md  __init__.py  api.py  audit_log.py  build-profile.json5  complex_case.txt  config.example.yaml  config.py  demo.py  demo.txt  evaluate_business_text.py  force_demo.py  force_report.json  full_audit_report.txt  generate_audit_index.py  l3_reflection.py  legal_config.py  legal_monitor.py  legal_utils.py  low_harmony_case.txt  main.py  oh-package.json5  pyproject.toml  real_functionality_test.py  report.json  requirements-dev.txt  requirements.txt  run_all_test_cases.py  (+15 more)
.github/workflows/: ci.yml
AppScope/: app.json5
docs/: COMPETITION.md  TEST_REPORT.md  index.md
entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
examples/: basic_usage.py  intervention_demo.py  real_world_example.py
ochr/: __init__.py  boundary.py  reflection_cavity.py  relationship_mapper.py
tests/: __init__.py  test_audit_log.py  test_contradiction_lifecycle.py  test_core.py  test_decorator.py  test_harmony_metrics.py  test_relationship_graph.py
thinkcheck/: core.py  decorator.py  improved.py
thinkcheck-harmony/: .gitignore  README.md  build_package.py  build_simple.py  demo_output.txt  pyproject.toml  quick_build.py  setup.py
thinkcheck-harmony/examples/: intervention_demo.py
thinkcheck-harmony/tests/: test_evaluator.py
thinkcheck-harmony/thinkcheck_harmony/: __init__.py  concept_graph.py  config.py  contradiction_lifecycle.py  core.py  evaluator.py  relationship_graph.py  report.py  report_generator.py
thinkcheck-harmony/thinkcheck_harmony.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
thinkcheck_agent/core/: actuator.py  challenger.py  evaluator.py  long_text.py  orchestration.py
thinkcheck_agent/tools/: file_handler.py
thinkcheck_agent/workflows/: legal_doc_review.py
thinkcheck_harmony/: __init__.py  contradiction_detector.py  evaluator.py  metrics.py  report.py  utils.py
thinkcheck_harmony.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
thinkcheck_harmony/intervention/: suggestion_engine.py  term_alignment.py  weight_negotiation.py
thinkcheck_harmony/utils/: embedding.py
thinkcheck_product/: .gitignore  CONTRIBUTING.md  README.md  build_output.txt  pyproject.toml  setup.py
thinkcheck_product/examples/: basic_usage.py  improved_example.py
thinkcheck_product/tests/: test_decorator.py
trace/: __init__.py  trajectory_v3_pure.py
(+31 files in other folders)
