[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkcheck-harmony"
version = "3.0.0"
description = "通用谐振评估与调谐SDK - 基于晶脉哲学"
authors = [{name = "李广好"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.20.0",
]
